@@ -223,6 +223,9 @@ Core and Builtins
 - PEP 393: flexible string representation. Thanks to Torsten Becker for the
   initial implementation, and Victor Stinner for various bug fixes.
 
+- Issue #14081: The 'sep' and 'maxsplit' parameter to str.split, bytes.split,
+  and bytearray.split may now be passed as keyword arguments.
+
 - Issue #13012: The 'keepends' parameter to str.splitlines may now be passed
   as a keyword argument:  "my_string.splitlines(keepends=True)".  The same
   change also applies to bytes.splitlines and bytearray.splitlines.
